--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: BYeah's Test Blog
+title: Biye Jiang
 email: bjiang@berkeley.edu
 description: > # this means to ignore newlines until "baseurl:"
   This is a test blog using Jekyll
